<resources>
    <string name="app_name" translatable="false">Delving Languages</string>
    <string name="app_version" translatable="false">4.3.0</string>
    <string name="about_content_contact" translatable="false">Developed by Rafael J. Lucena\nContact: rafaa89(at)gmail.com</string>
    <string name="about_content_title_new_features" translatable="false">New features and improvements:</string>
    <string name="about_content_new_features" translatable="false">
        Version 4.3.0 2017-08-XX:\nIntroducing Usages.\nIntroducing Phrasal Verbs feature screen.\nImprovements.\n
        \nVersion 4.2.1 2017-07-31:\nOnline search now allows to add translations in both directions.\nInternal changes.\nBug fixes and improvements.\n
        \nVersion 4.2.0 2017-07-23:\nIntroducing Records.\nOnline translator now powered by Yandex.Translate in some languages.\nNow you can also recover Themes and Tests from the Recycle Bin.\nBug fixes and other improvements.\n
        \nVersion 4.1.0 2017-07-01:\nMore languages supported.\nFlags improved.\nNavigation improved (+ new navigation list).\nMatch practise improved.\nImport fixes.\nBug fixes and other improvements.\n
        \nVersion 4.0.1 2016-11-01:\nMinor bug fixes.\n
        \nVersion 4.0.0 2016-08-30:\nIntroducing Data backup in server and synchronization.\nBugs fixed.\n
        \nVersion 3.3.0 2016-08-06:\nFixed phonetic keyboard vibration.\nDrawer menu reorganized.\nDrawer words can now be deleted by swiping.\nWeb search improved, plus added support for more languages.\nTests improved when dealing with no tts.\nSome translations.\nBug fixes.\n
        \nVersion 3.2.0 2016-07-15:\nHandler leaks fixes.\nTranslated to Spanish and Catalan.\nThemes editor improved.\nIntroducing Theme to test, start practising your themes.\nRemove bug fixes.\nPerformance improved when updating words and themes.\nTheme and test lists display improved.\nSeveral bug fixes.\n
        \nVersion 3.1.1 2016-07-10:\nPractise bug fixes. Remove/edit words bug fixes.\nStatistics display in main screen improved.\n
        \nVersion 3.1.0 2016-06-15:\nMarshmallow support: permissions, deprecated calls.\nDB bug fixes.\nAbout screen improved.\n
        \nVersion 3.0.0 2016-04-10:\nLollipop support.\nSettings standardized.\nBetter support/user interaction when TTS is needed.\nListening in practise redesigned.\nTests redesigned.\nListening added in test.\n
        \nVersion 2.3.0 2016-03-05:\nIntroducing Prepositions and Conjunctions.\n
        \nVersion 2.1.0 2016-01-08:\nIntroducing inflexions (replace translations).\n
    </string>
    <string name="about_content_title_next_releases" translatable="false">In next releases:</string>
    <string name="about_content_next_releases" translatable="false">
        - Sync bugs\n
        - Phrasal verbs screen feature\n
        - Verbs screen features\n
        - Test configuration\n
        - Dark theme\n
    </string>
    <string name="version">version</string>
    <string name="nn">NN</string>
    <string name="noun">Noun</string>
    <string name="noun_cap">NOUN</string>
    <string name="vb">VB</string>
    <string name="verb">Verb</string>
    <string name="verbs">Verbs</string>
    <string name="verb_cap">VERB</string>
    <string name="adj">ADJ</string>
    <string name="adjective">Adjective</string>
    <string name="adjective_cap">ADJECTIVE</string>
    <string name="adv">ADV</string>
    <string name="adverb">Adverb</string>
    <string name="adverb_cap">ADVERB</string>
    <string name="phv">PHV</string>
    <string name="phrasalverb">Phrasal verb</string>
    <string name="phrasalverbs">Phrasal verbs</string>
    <string name="phrasal_cap">PHRASAL VERB</string>
    <string name="exp">EXP</string>
    <string name="expression">Expression</string>
    <string name="expression_cap">EXPRESSION</string>
    <string name="prep">PREP</string>
    <string name="preposition">Preposition</string>
    <string name="preposition_cap">PREPOSITION</string>
    <string name="conj">CONJ</string>
    <string name="conjunction">Conjunction</string>
    <string name="conjunction_cap">CONJUNCTION</string>
    <string name="oth">OTH</string>
    <string name="other">Other</string>
    <string name="other_cap">OTHER</string>
    <string name="create_language">Create language_code</string>
    <string name="historial">Records</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="my_languages">My languages</string>
    <string name="language_features">Language features</string>
    <string name="web_search">Web search</string>
    <string name="practice">Practice</string>
    <string name="dictionary">Dictionary</string>
    <string name="drawer">Drawer</string>
    <string name="more">More</string>
    <string name="subjects">Subjects</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="language_settings">Language settings</string>
    <string name="word">Word</string>
    <string name="translations_cap">TRANSLATIONS</string>
    <string name="inflexions_cap">INFLEXIONS</string>
    <string name="match">Match</string>
    <string name="complete">Complete</string>
    <string name="write">Write</string>
    <string name="listening">Listening</string>
    <string name="test">Test</string>
    <string name="type_filter">Type filter</string>
    <string name="number_of_words">Number of words</string>
    <string name="main_types_content_description">%1$d nouns\n%2$d verbs\n%3$d adjectives\n%4$d adverbs\n%5$d phrasal verbs\n%6$d expressions\n%7$d prepositions\n%8$d conjunctions\n%9$d others\n%10$d subjects\n%11$d tests</string>
    <string name="main_types_content_description_no_phrasals">%1$d nouns\n%2$d verbs\n%3$d adjectives\n%4$d adverbs\n%5$d expressions\n%6$d prepositions\n%7$d conjunctions\n%8$d others\n%9$d subjects\n%10$d tests</string>
    <string name="content">Content</string>
    <string name="statistics">Statistics</string>
    <string name="main_stats_content_description">Attempts:\t\t %1$d\nNeat hits:\t\t\t %2$d (%3$.1f%%)\nHits at 2nd:\t %4$d (%5$.1f%%)\nHits at 3rd:\t\t %6$d (%7$.1f%%)\nErrors:\t\t\t\t %8$d (%9$.1f%%)</string>
    <string name="x_words">%1$d words</string>
    <string name="create_a_language">Create a language_code</string>
    <string name="import_from_file">Import from file</string>
    <string name="synchronize_your_account">Synchronize your account</string>
    <string name="how_do_we_start">How do we start?</string>
    <string name="create_one_now">Create one now</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="import_more">Import more</string>
    <string name="export_more">Export more</string>
    <string name="done">Done</string>
    <string name="proceed">Proceed</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="continue_">Continue</string>
    <string name="go_out">Go out</string>
    <string name="add_translation">Add Translation</string>
    <string name="dismiss">Dismiss</string>
    <string name="open_google_play">Google Play</string>
    <string name="open_settings">Settings</string>
    <string name="delete_all">Delete all</string>
    <string name="accept">Accept</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_word">Add word</string>
    <string name="add_subject">Add subject</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="add_to_drawer">Add to drawer</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="ok">OK</string>
    <string name="hint_enter_language">Enter language_code name</string>
    <string name="hint_enter_subject_name">Subject name</string>
    <string name="hint_search">Search</string>
    <string name="hint_enter_drawer">Write a word</string>
    <string name="hint_enter_backup_name">Enter a name for the backup file</string>
    <string name="hint_in_">in %1$s</string>
    <string name="hint_search_content">Search content</string>
    <string name="hint_translations">Translations</string>
    <string name="hint_inflexions">Inflexions</string>
    <string name="hint_enter_text_to_speech">Enter text to speech</string>
    <string name="hint_practise_write">Try something</string>
    <string name="hint_practise_listening">What did you hear?</string>
    <string name="hint_enter_test_name">Test name</string>
    <string name="msg_word_exists">%1$s already exists</string>
    <string name="msg_missing_word">Missing word</string>
    <string name="msg_missing_translations">Missing translations</string>
    <string name="msg_missing_type">Missing type</string>
    <string name="msg_missing_language_name">Missing language_code name</string>
    <string name="msg_language_created">Language created</string>
    <string name="msg_not_implemented">Function not implement yet</string>
    <string name="msg_preparing_file">Preparing file</string>
    <string name="msg_found_languages">Found %1$d language_code(s)</string>
    <string name="msg_n_references">%1$d words</string>
    <string name="msg_n_drawerreferences">%1$d words in the drawer</string>
    <string name="msg_n_subjects">%1$d subjects</string>
    <string name="msg_n_tests">%1$d tests</string>
    <string name="msg_import_finished">Import finished successfully</string>
    <string name="msg_export_finished">Export finished successfully</string>
    <string name="msg_not_dl_file">Selected file is not a Delving Languages file</string>
    <string name="error">Error</string>
    <string name="msg_select_languages_backup">Select languages to backup</string>
    <string name="msg_could_access_disc">Couldn\'t access to disc</string>
    <string name="msg_saving_">Saving %1$s</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_data">Data</string>
    <string name="pref_phonetic_keyboard_vibration">Phonetic keyboard vibration</string>
    <string name="pref_app_theme">App theme</string>
    <string name="pref_import_data">Import data</string>
    <string name="pref_export_data">Export data</string>
    <string name="pref_phonetic_keyboard_vibration_key" translatable="false">pref2</string>
    <string name="pref_app_theme_key" translatable="false">pref3</string>
    <string name="pref_import_data_key" translatable="false">pref4</string>
    <string name="pref_export_data_key" translatable="false">pref5</string>
    <string name="pref_title_options">Options</string>
    <string name="pref_list_language_from_code">From</string>
    <string name="pref_list_language_to_code">To</string>
    <string name="pref_list_name">Language name</string>
    <string name="pref_list_phrasal_verbs">Phrasal verbs</string>
    <string name="pref_list_public">Public</string>
    <string name="pref_list_merge">Merge</string>
    <string name="pref_list_remove">Delete</string>
    <string name="pref_list_reset_statistics">Reset statistics</string>
    <string name="pref_list_language_from_code_key" translatable="false">langpref1</string>
    <string name="pref_list_language_to_code_key" translatable="false">langpref2</string>
    <string name="pref_list_name_key" translatable="false">langpref3</string>
    <string name="pref_list_phrasal_key" translatable="false">langpref4</string>
    <string name="pref_list_public_key" translatable="false">langpref5</string>
    <string name="pref_list_merge_key" translatable="false">langpref6</string>
    <string name="pref_list_remove_key" translatable="false">langpref7</string>
    <string name="pref_list_reset_statistics_key" translatable="false">langpref8</string>
</resources>