<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_general">

        <EditTextPreference
            android:dialogTitle="EditText Dialog"
            android:key="@string/pref_list_name_key"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/accept"
            android:title="@string/pref_list_name"/>

        <ListPreference
            android:dialogIcon="@drawable/ic_language"
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="@string/pref_list_language_from_code_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_list_language_from_code"/>

        <ListPreference
            android:dialogIcon="@drawable/ic_language"
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="@string/pref_list_language_to_code_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_list_language_to_code"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_list_phrasal_key"
            android:title="@string/pref_list_phrasal_verbs"/>

        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/pref_list_public_key"
            android:title="@string/pref_list_public"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_options">

        <Preference
            android:key="@string/pref_list_merge_key"
            android:title="@string/pref_list_merge"/>

        <Preference
            android:key="@string/pref_list_remove_key"
            android:title="@string/pref_list_remove"/>

        <Preference
            android:key="@string/pref_list_reset_statistics_key"
            android:title="@string/pref_list_reset_statistics"/>

    </PreferenceCategory>

</PreferenceScreen>