<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_general">

        <ListPreference
            android:defaultValue="0"
            android:dialogIcon="@drawable/ic_language"
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="@string/pref_app_language_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_app_language"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_phonetic_keyboard_vibration_key"
            android:title="@string/pref_phonetic_keyboard_vibration"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_customization">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themes"
            android:entryValues="@array/themes_codes"
            android:key="@string/pref_app_theme_key"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_app_theme"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_data">

        <Preference
            android:key="@string/pref_import_data_key"
            android:title="@string/pref_import_data">

            <intent android:action="com.delvinglanguages.backup.IMPORT"/>

        </Preference>

        <Preference
            android:key="@string/pref_export_data_key"
            android:title="@string/pref_export_data">

            <intent android:action="com.delvinglanguages.backup.EXPORT"/>

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
