<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_header_languages"
            android:icon="@drawable/ic_language"
            android:title="@string/my_languages">

            <menu xmlns:android="http://schemas.android.com/apk/res/android"/>

        </item>

        <item
            android:id="@+id/nav_create_language"
            android:icon="@drawable/ic_add"
            android:title="@string/create_language"/>

        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_history"
            android:title="@string/historial"/>

        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about"/>

    </group>

</menu>
