<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="#AACCCCCC"
        android:paddingLeft="20dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        
        android:text="La palabra"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/noun"
            style="@style/button_type_word"
            android:background="@drawable/button_noun"
            android:text="@string/nn" />

        <Button
            android:id="@+id/verb"
            style="@style/button_type_word"
            android:background="@drawable/button_verb"
            android:text="@string/vb" />

        <Button
            android:id="@+id/adj"
            style="@style/button_type_word"
            android:background="@drawable/button_adjective"
            android:text="@string/adj" />

        <Button
            android:id="@+id/adverb"
            style="@style/button_type_word"
            android:background="@drawable/button_adverb"
            android:text="@string/adv" />

        <Button
            android:id="@+id/phrasal"
            style="@style/button_type_word"
            android:background="@drawable/button_phrasal"
            android:text="@string/phv" />

        <Button
            android:id="@+id/expression"
            style="@style/button_type_word"
            android:background="@drawable/button_expression"
            android:text="@string/exp" />

        <Button
            android:id="@+id/other"
            style="@style/button_type_word"
            android:background="@drawable/button_other"
            android:text="@string/oth" />
    </LinearLayout>

</LinearLayout>