<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/about_content_header"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/about_content_contact"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            style="@style/about_sec_title"
            android:text="@string/about_content_title_new_features"/>

        <TextView
            style="@style/about_sec_content"
            android:text="@string/about_content_new_features"/>

        <TextView
            style="@style/about_sec_title"
            android:text="@string/about_content_title_next_releases"/>

        <TextView
            style="@style/about_sec_content"
            android:text="@string/about_content_next_releases"/>

    </LinearLayout>

</ScrollView>

