<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/option_themes"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_theme"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/themes"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_phrasal_verbs"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_type"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/phrasalverbs"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_verbs"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_type"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/verbs"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_web_search"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_search"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/web_search"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_pronunciation"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_pronunciation"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/pronunciation"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_recycle_bin"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_delete"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/recycle_bin"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/option_settings"
        style="@style/Option_Linearlayout">

        <ImageView
            style="@style/Option_Imageview"
            android:src="@drawable/ic_settings"/>

        <TextView
            style="@style/Option_Textview"
            android:text="@string/language_settings"/>

    </LinearLayout>

</LinearLayout>